--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Simone
 # middle_name: R.
 last_name: Antonelli
-# email: 
+email: simone dot antonelli97 at gmail dot com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   I am an MSc student in Computer Science at the Sapienza University of Rome interested in explaining what deep neural networks learn.
 footer_text: >
@@ -101,9 +101,8 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
-blog_description: a simple whitespace theme for academics
+blog_name: # your blog must have a name for it to show up in the nav bar
+blog_description: # a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -159,10 +158,12 @@ kramdown:
 include: ['_pages']
 exclude:
   - _pages/dropdown
+  - _pages/publications
   - _pages/teaching
   - _news/sample_announcement.md 
   - blog # remove to add blog page
   - _posts # remove to add posts to blog page
+  - _pages/publications # remove to add the publications page
   - bin
   - Gemfile
   - Gemfile.lock
