--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Simone
 # middle_name: R.
 last_name: Antonelli
-email: simone dot antonelli97 at gmail dot com
+# email: 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   I am an MSc student in Computer Science at the Sapienza University of Rome interested in explaining what deep neural networks learn.
 footer_text: >
@@ -83,6 +83,8 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
+
+rss_icon: false
 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
