--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,93 @@
-- title: General Information
+- title: Personal Info
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Simone Antonelli
+    - name: Location
+      value: Rome, Italy
+    - name: Email
+      value: '[first] dot [last] 97 at gmail dot com'
 
 - title: Education
-  type: time_table
+  type: table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title:  MSc in Computer Science @ Sapienza University of Rome
+      year: 2019-now
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - '<u>GPA: </u> 29.2/30'
+        - title: 'Major topics'
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+            - Advanced Algorithms
+            - Machine Learning
+            - Deep Learning
+            - Computer Vision
+            - Natural Language Processing
+    - title: BSc in Computer Science @ Sapienza University of Rome
+      year: 2016-2019
       description:
-        - Description 1.
-        - Description 2.
-
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - '<u>GPA: </u> 27.2/30'
+        - title: 'Major topics'
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+            - Algorithms 
+            - Software Engineering
+            - Artificial Intelligence
+
+- title: Research Experience
+  type: table
+  contents:
+    - title: 'Master thesis development - GLADIA Research Group@Sapienza University of Rome'
+      year: 2021
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - '<b>Title:</b> Model-Level Explanation of PointNet Framework via Input Optimization'
+        - Design and implementation of a novel 3D deep generative framework to reconstruct 3D point clouds via Adversarial Autoencoder
+        - Explanation of a deep neural model dealing with 3D data(PointNet) through a post-hoc technique to visualize what the artificial neural network has learned
+    - title: 'Master thesis development - MCLab Research Group@Sapienza University of Rome'
+      year: 2019
       description:
+        - '<b>Title:</b> ModelsTranslator, a translating tool for biological models'
+        - Analysis, design and development of a translating tool for biological models in several modelling languages to encourage models re-use in the community
+        - Test analysis and simulation of the translated models
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
+- title: Projects
+  type: table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Few-Shot Object Detection via an Instance-aware branch
+      year: 2021
+      description:
+        - Design and implementation of a novel approach to detect objects from few examples
+    - title: Towards Conditionality in Probabilistic Diffusion Models
+      year: 2021
+      description: 
+        - Refine probabilistic diffusion models for image generation, including class conditionality by adapting GANs techniques
+    - title: Learning of Independent Causal Mechanisms on 3D Shapes
+      year: 2020
+      description: 
+        - Training of a framework to learn several models each focused in inverting a transformation on 3D point clouds by leveraging causality
+        - Build 3D point cloud MNIST dataset
 
-- title: Honors and Awards
-  type: time_table
+- title: Acknowledgments
+  type: table
   contents:
-    - year: 1921
+    - title: Honours Programme in Computer Science - Sapienza University of Rome
+      year: 2021
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+        - Extracurricular activity for worthy students giving those the opportunity to approach the research
+        - I focused my honours programme in discovering causal mechanisms on non- Euclidean data
+        - Supervised by professor <a href="https://sites.google.com/site/erodola/" target="_blank">Emanuele Rodolà</a>
 
-- title: Academic Interests
-  type: nested_list
+- title: Summer Schools
+  type: table
   contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
+    - title: Pre-Doctoral Research School @ Cornell University, Maryland University, Max Planck Institute
+      year: Aug, 2021
+      description: Admitted as an outstanding student to (virtually) attend a week of lectures about cutting-edge research topics in Computer Science
+    - title: Machine Learning Summer School @ Max-Planck-Gesellschaft
+      year: Aug, 2021
+      description: Selected to (virtually) participate in the General Program of the MLSS where leading experts in Machine Learning discuss core topics of the field.
+    
+- title: Skills
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - '<u>Programming</u>: <b>Python</b>, C++, Java, LaTeX'
+    - '<u>Technologies</u>: PyTorch, common Python ML libraries'
+    - '<u>Environments</u>: Visual Studio Code, PyCharm, Google Colab'
