--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,22 +1,10 @@
 "Crisostomi":
-  - firstname: ["Donato", "D."]
+  - firstname: ["Donato", "D.", "D.<b>*</b>"]
     url: https://scholar.google.com/citations?user=56z9EQgAAAAJ
 
 "Galasso":
-  - firstname: ["Fabio", "F."]
+  - firstname: ["Fabio", "F.", "F.<b>*</b>"]
     url: https://scholar.google.com/citations?user=2gSuGBEAAAAJ
-
-"Rodolà":
-  - firstname: ["Emanuele", "E."]
-    url: https://scholar.google.com/citations?user=-EH4wBYAAAAJ
-  
-"Marin":
-  - firstname: ["Riccardo", "R."]
-    url: https://scholar.google.it/citations?user=qhw2qgQAAAAJ
-
-"Moschella":
-  - firstname: ["Luca", "L."]
-    url: https://scholar.google.it/citations?user=4byA-nefJJMC
 
 "Maiorca":
   - firstname: ["Valentino", "V."]
