Add first publication

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,6 +1,10 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"Crisostomi":
+  - firstname: ["Donato", "D.", "D.<b>*</b>"]
+    url: https://scholar.google.com/citations?user=56z9EQgAAAAJ
+
+"Galasso":
+  - firstname: ["Fabio", "F.", "F.<b>*</b>"]
+    url: https://scholar.google.com/citations?user=2gSuGBEAAAAJ
 
 "Podolsky":
   - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
@@ -16,19 +20,3 @@
 
   - firstname: ["Carl Philipp Emanuel", "C. P. E."]
     url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
-
-"Przibram":
-  - firstname: ["Karl"]
-    url: https://link.springer.com/article/10.1007/s00016-019-00242-z
-
-"Schrödinger":
-  - firstname: ["Erwin"]
-    url: https://en.wikipedia.org/wiki/Erwin_Schr%C3%B6dinger
-
-"Lorentz":
-  - firstname: ["Hendrik Antoon"]
-    url: https://en.wikipedia.org/wiki/Hendrik_Lorentz
-
-"Planck":
-  - firstname: ["Max"]
-    url: https://en.wikipedia.org/wiki/Max_Planck
