--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,18 +1,7 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"Crisostomi":
+  - firstname: ["Donato", "D.", "D.<b>*</b>"]
+    url: https://scholar.google.com/citations?user=56z9EQgAAAAJ
 
-"Podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
-
-"Rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
-
-"Bach": 
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
-
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
+"Galasso":
+  - firstname: ["Fabio", "F.", "F.<b>*</b>"]
+    url: https://scholar.google.com/citations?user=2gSuGBEAAAAJ
