--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,9 +1,9 @@
 "Crisostomi":
-  - firstname: ["Donato", "D.", "D.<b>*</b>"]
+  - firstname: ["Donato", "D."]
     url: https://scholar.google.com/citations?user=56z9EQgAAAAJ
 
 "Galasso":
-  - firstname: ["Fabio", "F.", "F.<b>*</b>"]
+  - firstname: ["Fabio", "F."]
     url: https://scholar.google.com/citations?user=2gSuGBEAAAAJ
 
 "Maiorca":
