--- a/_config.yml
+++ b/_config.yml
@@ -100,10 +100,10 @@ contact_note: >
 # Analytics and search engine verification
 # -----------------------------------------------------------------------------
 
-google_analytics: G-RRRYW95ZBN # your google-analytics ID (format: UA-XXXXXXXXX)
+google_analytics: G-XCK458LS4R # your google-analytics ID (format: UA-XXXXXXXXX)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_site_verification: 1cd8hRUVw8AMWI0SxSsIP-r2kXTvlxlB8KFwxY66gzs # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
