--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Simone
 middle_name:
 last_name: Antonelli
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  I am a 1st-year Ph.D. student in Computer Science at CISPA Helmholtz Center interested in trustworthy machine learning with a focus on graph neural networks.
+  I am a Ph.D. candidate at the CISPA Helmholtz Center interested in the inner workings of neural networks to make their predictions more trustworthy.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
