--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -7,7 +7,7 @@ github_username: siantonelli # your GitHub user name
 x_username: sntonelli # your X handle
 bluesky_url: https://bsky.app/profile/siantonelli.bsky.social # your bluesky URL
 linkedin_username: siantonelli # your LinkedIn user name
-scholar_userid: V1ECJ8YAAAAJ # your Google Scholar ID
+scholar_userid: xzgqj2wAAAAJ # your Google Scholar ID
 # acm_id: # your dl.acm.org/profile/id
 # blogger_url: # your blogger URL
 # dblp_url: # your DBLP profile url
